# Project_Support_Auto_LLM

./: .gitignore  LaunchSupportCaseManager.python.cmd  README.md  SupportCaseManager.slnx  SupportCaseManager.spec  build.bat  cases-index.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: ai-inventory.json  aibom.cdx.json  user-settings.json
docs/: AI_BOM.md  AI_USAGE.md  SupportCaseManager_UserGuide_ja.md  acceptance-test-log.md  build_user_guide.py  compatibility.md  expand_user_guide.py
python/support_case_manager/: __init__.py  __main__.py  app.py
python/support_case_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/SupportCaseManager.Ai.Contracts/: AiAssistantLaunchContext.cs  AiAssistantSettings.cs  AnswerDraftRequest.cs  AnswerDraftResult.cs  CandidateFact.cs  CaseContext.cs  CuratedFactCatalog.cs  EvidenceItem.cs  FactResolutionResult.cs  InquiryFocus.cs  LlmProviderSettings.cs  NeedConfirmationItem.cs  NoteSnapshot.cs  ProductFactCatalog.cs  ProductKnowledgeSettings.cs  QuestionClassificationResult.cs  ResolvedFact.cs  SearchSource.cs  SupportToolProductSettings.cs
src/SupportCaseManager.Ai.Core/: SupportCaseManager.Ai.Core.csproj
src/SupportCaseManager.AiAssistant.App/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  SupportCaseManager.AiAssistant.App.csproj
src/SupportCaseManager.App/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  SupportCaseManager.App.csproj
テスト用メール文章/: Checkmarx_テスト用メール文章.md  Klocwork_テスト用メール文章.md  QAC_テスト用メール文章.md  README.md
(+212 files in other folders)
